# tweak_shader

./: .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: ci.yml
tweak_graph/: Cargo.toml
tweak_graph/src/: types.rs
tweak_runner/: Cargo.toml  ReadMe.md
tweak_runner/resources/: letterbox.glsl
tweak_runner/src/: app.rs  initialization.rs  main.rs  ui.rs
tweak_runner/src/video/: dummy_video.rs  mod.rs  video.rs
tweak_shader/: Cargo.toml  ReadMe.md
tweak_shader/resources/: stub.wgsl
tweak_shader/src/: audio.rs  context.rs  input_type.rs  lib.rs  parsing.rs  preprocessing.rs  uniforms.rs  video.rs
tweak_shader/src/uniforms/: error.rs  mod.rs  naga_bridge.rs  validation.rs
tweak_shader/tests/: headless.rs  parsing.rs
tweak_shader_examples/: ascii.fs  audio.fs  basic.fs  compute_multipass.glsl  exit_the_matrix.fs  game_of_life.glsl  hello_compute.glsl  jump_flood.fs  mouse_input.fs  passes.fs  persistent.fs  plexus.fs  tex.fs  twister.fs
