[package]
name = "tweak_runner"
version = "0.2.3"
edition = "2021"
description = "a runner for the tweak shader library."
license = "MIT"

[features]
default = []
video = ["ffmpeg-next"]

[dependencies.ffmpeg-next]
version = "6.0.0"
optional = true

[dependencies]
tweak_shader = { path = "../tweak_shader/" }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify", rev = "b828cbc" }
egui-wgpu = { git = "https://github.com/emilk/egui", rev = "1f6ae49", features = [
  "winit",
] }
egui-winit = { git = "https://github.com/emilk/egui", rev = "1f6ae49" }
egui_plot = { git = "https://github.com/emilk/egui_plot/", rev = "d00fa85" }
pollster = "0.3.0"
notify = "6.1.1"
tinyfiledialogs = "3.9.1"
image = "0.24.7"
ringbuf = "0.3.3"
rustfft = "6.1.0"
chrono = "0.4.31"
