[package]
name = "tweak_runner"
version = "0.4.1"
edition = "2021"
description = "a runner for the tweak shader library."
license = "MIT"
repository = "https://github.com/mobile-bungalow/tweak_shader"
documentation = "https://docs.rs/tweak_runner"
keywords = ["graphics", "wgpu", "shadertoy", "shader", "live-coding"]

[features]
default = []
video = ["ffmpeg-next"]

[dependencies.ffmpeg-next]
version = "6.0.0"
optional = true

[dependencies]
tweak_shader = { version = "0.6.0", path = "../tweak_shader/" }
egui-wgpu = { version = "0.33.2", features = ["winit"] }
egui-notify = "0.21.0"
egui-winit = "0.33.2"
egui_plot = "0.34.0"
pollster = "0.3.0"
notify = "6.1.1"
tinyfiledialogs = "3.9.1"
image = "0.24.7"
cpal = "0.15.2"
ringbuf = "0.3.3"
rustfft = "6.1.0"
chrono = "0.4.31"
