[package]
name = "tweak_shader"
version = "0.3.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/mobile-bungalow/tweak_shader"
documentation = "https://docs.rs/tweak_shader"
keywords = ["graphics", "wgpu", "shadertoy", "post-processing"]
description = "A simple wgpu helper library for building flexible screen shaders."

[features]
default = []
video = ["ffmpeg-next"]

[dependencies.ffmpeg-next]
version = "6.0.0" 
optional = true

[dependencies]
wgpu = { version = "0.20.0", features = ["glsl", "naga-ir"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = { version= "1.4.0" }
pollster = "0.3.0"
image = "0.24.7"
