[package]
name = "tweak_shader"
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mobile-bungalow/tweak_shader"
documentation = "https://docs.rs/tweak_shader"
keywords = ["graphics", "wgpu", "shadertoy", "post-processing"]
description = "A simple wgpu helper library for building flexible screen shaders."

[features]
default = []

[dependencies]
thiserror = "1.0.63"
wgpu = { version = "27.0.0", features = ["glsl", "naga-ir", "webgpu"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
nom = "7.1.3"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
gloo-timers = "0.3"

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
pollster = "0.3.0"
image = "0.24.7"
